# FastAPI-Blog

./: .gitignore  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
templates/: home.html  layout.html
