[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
]
